Fixed existing tests + added more to increase coverage